<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.artofarc.eai</groupId>
	<artifactId>esb0-utils</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>utils</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>xsom</artifactId>
			<version>2.3.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>jakarta.json</artifactId>
			<version>1.1.6</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>jakarta.json.bind</groupId>
		    <artifactId>jakarta.json.bind-api</artifactId>
		    <version>1.0.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>org.eclipse</groupId>
		    <artifactId>yasson</artifactId>
		    <version>1.0.8</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.saxon</groupId>
			<artifactId>Saxon-HE</artifactId>
			<version>9.9.1-8</version>
			<classifier>xqj</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.fastinfoset</groupId>
			<artifactId>FastInfoset</artifactId>
			<version>1.2.18</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.fastinfoset</groupId>
			<artifactId>FastInfosetUtilities</artifactId>
			<version>1.2.18</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.jms</groupId>
			<artifactId>jakarta.jms-api</artifactId>
			<version>2.0.3</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.wss4j/wss4j-ws-security-dom -->
		<dependency>
			<groupId>org.apache.wss4j</groupId>
			<artifactId>wss4j-ws-security-dom</artifactId>
			<version>2.3.3</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.wss4j/wss4j-ws-security-common -->
		<dependency>
			<groupId>org.apache.wss4j</groupId>
			<artifactId>wss4j-ws-security-common</artifactId>
			<version>2.3.3</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.wss4j/wss4j-ws-security-stax
		<dependency>
			<groupId>org.apache.wss4j</groupId>
			<artifactId>wss4j-ws-security-stax</artifactId>
			<version>2.3.3</version>
			<scope>provided</scope>
		</dependency>
		-->

	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
